# ittapk

./: Makefile  README.md
lecture01/: CMakeLists.txt
lecture01/includes/lecture01/exercise01/: SharedPtr.h
lecture01/includes/lecture01/exercise02/: SharedPtr.h
lecture01/includes/lecture01/exercise04/: SharedPtr.h
lecture01/modules/: FindGTest.cmake
lecture01/test/exercise01/: test_exercise01_SharedPtr.cpp
lecture01/test/exercise02/: test_exercise02_Comparison.cpp  test_exercise02_SharedPtrUnsafe.cpp
lecture02/: CMakeLists.txt
lecture02/includes/lecture02/exercise01/: MyArray.h
lecture02/includes/lecture02/exercise02/: MyArray.h
lecture02/includes/lecture02/exercise03/: MyArray.h
lecture02/test/exercise01/: test_exercise01_MyArray.cpp
lecture02/test/exercise02/: test_exercise02_MyArray.cpp
lecture02/test/exercise03/: test_exercise03_MyArray.cpp
lecture03/: CMakeLists.txt
lecture03/includes/lecture03/exercise01/: Exceptions.h
lecture03/includes/lecture03/exercise02/: LogFile.h  LogFileTransformed.h
lecture03/src/exercise02/: LogFile.cpp  LogFileTransformed.cpp  ProgramTransformation.cpp
lecture03/test/exercise01/: test_exercise01_MyArray.cpp  test_exercise01_MyVector.cpp  test_exercise01_Strong.cpp
lecture04/: CMakeLists.txt
lecture04/includes/lecture03/exercise02/: LogFileTransformed.h
lecture04/src/exercise02/: LogFileTransformed.cpp
lecture04/test/exercise02/: test_exercise02_Strong.cpp
lecture05/: CMakeLists.txt
lecture05/includes/lecture05/exercise01/: product.h
lecture05/includes/lecture05/exercise02/: MyArray.h
lecture05/src/: main.cpp
lecture05/test/exercise01/: test_exercise01.cpp
lecture05/test/exercise02/: test_exercise02.cpp
lecture06_basic/: CMakeLists.txt
lecture06_basic/test/exercise02/: test_exercise02_SharedPtrUnsafe.cpp
lecture06_timer/: CMakeLists.txt
lecture06_timer/includes/lecture06_timer/exercise01/: Events.hpp  SharedPtr.h  Timer.hpp
lecture06_timer/includes/lecture06_timer/exercise02/: Events.hpp  Functor.hpp  Timer.hpp
lecture06_timer/includes/lecture06_timer/exercise03/: SharedPtr.h
lecture06_timer/src/exercise01/: Bindfunction.cpp  Events.cpp  Timer.cpp
lecture06_timer/src/exercise02/: Bindfunction.cpp  Events.cpp  Functor.cpp  Timer.cpp
lecture06_timer/test/exercise02/: test_exercise02_Comparison.cpp
lecture06_timer/test/exercise04/: test_exercise04_Comparison.cpp
lecture06_variant/: CMakeLists.txt
lecture06_variant/includes/lecture06_variant/exercise01/: Variance.h
lecture06_variant/includes/lecture06_variant/exercise02/: Visitor.h
lecture06_variant/test/exercise01/: test_exercise01_SharedPtr.cpp  test_exercise01_VariantStream.cpp
lecture06_variant/test/exercise02/: test_exercise02_Visitors.cpp
lecture06_variant/test/exercise03/: test_exercise03_SharedPtr.cpp
lecture07_08/: CMakeLists.txt
lecture07_08/test/exercise02/: test_exercise02_binaru.cpp
lecture07_08/test/exercise03/: test_exercise03_Typelist.cpp
lecture09/: CMakeLists.txt
lecture09/src/exercise02/: radio.cpp
modules/: FindBoost.cmake
